css/styles.css
html,
body {
  height: 175%;
  font-family: " Century Gothic";
  font-weight: 300;
}

#wrap {
  min-height: 100%;
  height: 100%;
  /* Negative indent footer by its height */
  margin: 0 auto -82px 0;
  /* Pad bottom by footer height */
  padding: 0 0 80px 0;
}

/* Set the fixed height of the footer here */
#footer {
  height: 80px;
  background-color: #f5f5f5;
}

#wrap > .center-container {
  padding: 50px 0 0 0;
  margin:0;
}

#footer > .container {
  padding-top:5px;
  padding-left: 15px;
  padding-right: 15px;
}

.center-container {
  height:100%;
  display: table;
  width:100%;
  margin:0;
}

.center-row {
  height:25%;
  width:100%;
  display: table-row;
}
  
.center-row > div {
  height:100%;
  width:50%;
  display: table-cell;
  border:0 solid #eee;
  color:#fff;
  vertical-align:middle;
}

.bg-one {
  background:#efefef url('../images/blueBackground.jpg');
}
.bg-two {
  background:#efefef url('../images/orangeBackground.jpg');
}
.bg-three {
  background:#efefef url('../images/pinkBackground.jpg');
}
.bg-four {
  background:#efefef url('../images/purpleBackground.jpg');
}
.bg-five {
    background:#efefef url('../images/brownBackground.jpg');
}
.bg-six {
    background:#efefef url('../images/greenBackground.jpg');
}

.bg-seven {
    background:#efefef url('../images/purpleBackground.jpg');
}

.bg-eight {
    background:#efefef url('../images/waterBackground.jpg');
}

#regular-text {
    color: #000000;
    background-color: #ffffff;
}

/* Clock styles for header views - Adding rumbling effect from http://jackrugile.com/jrumble/ */
#clock-one {

}

#clock-two {

}

#clock-three {

}

#clock-four {

}

#clock-five {

}

#clock-six {

}

#color-code {
    font-size: 44px;
    margin-top: 100px;
}

.time-body {
    margin-top: 50px;
}

.regular-clock {
    margin-top: 80px;
    font-size: 44px;
}

.progress-indicator-percentage {
    font-size: 30px;
    margin-top: 20px;
}

.blankBackgroundColor {
    background-color: white;
}

.filledBackgroundColor {
    background-color: red;
}

.bullet-point-binary {
    display: block;
    background-color: #000000;
    width: 25px;
    height: 25px;
    margin: 24% 40% 24% 40%;
    -moz-border-radius: 15px;
    -webkit-border-radius: 15px;
    border-radius: 25px;
}

.hidden-section {
    /* Commenting for time being, but in case we need to hide unused bullet points in future, just uncomment this line
    and everything will work as expected */
    /*visibility: hidden; */
}

.binary-clock-footer {
    display: block;
    margin-top: -50px;
    font-size: 20px;
    height: 8%;
    background-color: #000000;
}

.time-indicator {
    float: left;
    width: 33%;
    text-align: center;
}

#binary-clock {
    width: 100%;
    height: 75%;
    margin-top: 5%;
}

/* Binary clock parameters */
.hours1{
    background: none repeat scroll 0 0 #269abc;
    float: left;
    height: 75%;
    width: 16%;
    margin-left: 2%;
}
.hours2{
    background: none repeat scroll 0 0 #269abc;
    float: left;
    height: 75%;
    width: 16%;
}
.minutes1{

    float: left;
    height: 75%;
    width: 16%;
    background:#398439;
}

.minutes2{
    background: none repeat scroll 0 0 #398439;
    float: left;
    height: 75%;
    width: 16%;
}
.seconds1{
    background: none repeat scroll 0 0 #d58512;
    float: left;
    height: 75%;
    width: 16%;
}
.seconds2{
    float: left;
    height: 75%;
    width: 16%;
    background:#d58512;
}

/* This all CSS code for designing progress bar for one of the clocks designs */
.ui-progressbar .ui-progressbar-value {
    background-image: url('../images/progress.png');
}

#progressbar {
    margin-top: 15%;
    height: 60px;
}

.element-initial-block {
    font-family: 'Vollkorn' !important;
    font-weight: 400;
    font-style: normal;
    font-size: 74px;
    height: 50px;
    line-height: 1.1em;
    width: 50%;
    margin: 20px auto;

}

.element-details {
    font-family: 'Vollkorn' !important;
    width: 100%;
    height: 64%;
    margin: 40px auto auto;
    font-size: 20px;
    border: 2px solid #000000;
    border-radius: 25px;
    background-color: #a1a1a1;
}

.first-row, .second-row, .third-row {
    height: 33%;
    width: 100%;
    margin: 5px 0;
}

.first-row {
    border-bottom: 1px solid #000000;
}

.second-row {
    border-bottom: 1px solid #000000;
}

/* For arranging element property names horizontally in the container */
.first-column, .second-column, .third-column{
    float: left;
    height: 33%;
    width: 30%;
    margin: 0 10px;
}

.second-column {
    border-left: 1px solid #000000;
    border-right: 1px solid #000000;
}

